[project]
name = "rhsda-mcp"
version = "0.1.0"
description = "MCP server for Red Hat Security Data API - query CVEs and security advisories"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "toughIQ", email = "toughiq@gmail.com" }
]
maintainers = [
    { name = "toughIQ", email = "toughiq@gmail.com" }
]
keywords = ["mcp", "security", "cve", "rhsa", "red-hat", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/toughIQ/rhsda-mcp"
Repository = "https://github.com/toughIQ/rhsda-mcp"
Issues = "https://github.com/toughIQ/rhsda-mcp/issues"
